// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/got/index uses  basic auth 1`] = `
Object {
  "body": Object {},
  "options": Object {
    "auth": ":test",
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "gotTimeout": Object {
      "request": 60000,
    },
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses  basic auth 2`] = `
Object {
  "body": Object {},
  "options": Object {
    "auth": ":test",
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "gotTimeout": Object {
      "request": 60000,
    },
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses  bearer auth 1`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "Bearer XXX",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses  bearer auth 2`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "Bearer XXX",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses cache 1`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostType": "github",
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses no cache 1`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostType": "github",
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useCache": false,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses no cache 2`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostType": "github",
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "HEAD",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses private-token auth 1`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "Private-token": "XXX",
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostType": "gitlab",
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index uses token auth 1`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token XXX",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostType": "gitea",
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;
